--- a/express-service/package.json
+++ b/express-service/package.json
@@ -2,8 +2,10 @@
   "name": "express-service",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -11,7 +13,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "express": "^4.21.1"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "express-service": "^1.7.0"
   },
   "devDependencies": {
     "prisma": "^5.20.0"
