--- a/express-service/package.json
+++ b/express-service/package.json
@@ -16,7 +16,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "express-service": "^1.7.0"
+    "express-service": "file:"
   },
   "devDependencies": {
     "prisma": "^5.20.0"
