--- a/react-js/package.json
+++ b/react-js/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-js": "file:",
     "recharts": "^2.13.0"
   },
   "devDependencies": {
